objects/Recap__c.object
<CustomObject>
    <fields>
        <fullName>Processes_and_Templates_Verification_Due__c</fullName>
        <description>Auto calculated from Project Created Date or Alternate Start Date</description>
        <label>Processes and Templates Verification Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Processes_and_Templates_Verification__c</fullName>
        <label>Processes and Templates Verification</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Processes_and_Templates_Verified_Date__c</fullName>
        <label>Processes and Templates Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Processes_verification_form_notes__c</fullName>
        <label>Processes Verification Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Trainer_Comments__c</fullName>
        <label>Product Trainer Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Trainer__c</fullName>
        <label>Product Trainer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Training_Complete_Due_Date__c</fullName>
        <description>Auto calculated from Training Start Date</description>
        <label>Product Training Complete Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Training_Complete_On_Time__c</fullName>
        <formula>IF( !ISPICKVAL(Product_Training_Complete__c,&quot;N/A&quot;) &amp;&amp;  Product_Training_Completed_Date__c &lt;= Product_Training_Complete_Due_Date__c , &quot;Yes&quot;, 
IF( !ISPICKVAL(Product_Training_Complete__c,&quot;N/A&quot;) &amp;&amp;  Product_Training_Completed_Date__c &gt;  Product_Training_Complete_Due_Date__c ,
&quot;No&quot;,
IF( !ISPICKVAL(Product_Training_Complete__c,&quot;N/A&quot;) &amp;&amp; ISBLANK(Product_Training_Completed_Date__c),
&quot;No&quot;, NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Training Complete On Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Training_Complete_Set_Days_Due__c</fullName>
        <defaultValue>4</defaultValue>
        <label>Product Training Complete Set Days Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Training_Complete__c</fullName>
        <label>Product Training Complete</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Training_Completed_Date__c</fullName>
        <label>Product Training Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Piece__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Piece</label>
        <referenceTo>Project_Piece__c</referenceTo>
        <relationshipLabel>Recaps</relationshipLabel>
        <relationshipName>Recap</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <formula>IF(  ISBLANK(Project__r.Alternate_Start_Date__c), DATEVALUE(Project__r.CreatedDate),Project__r.Alternate_Start_Date__c)</formula>
        <inlineHelpText>formula field, same as the project created date. Used by workflow to set the Due Dates for scoring</inlineHelpText>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date_new__c</fullName>
        <inlineHelpText>updated by workflow when the alternate start date added or changed</inlineHelpText>
        <label>Project Start Date (new)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is related to the Project as a child</description>
        <label>Project</label>
        <referenceTo>SFDC_520_Quote__c</referenceTo>
        <relationshipLabel>Recap</relationshipLabel>
        <relationshipName>Recap</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Q10_Notes__c</fullName>
        <label>VinVideos Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q11_Notes__c</fullName>
        <label>Photo Overlay Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q12_Notes__c</fullName>
        <label>CRM Data Upload Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>R01__c</fullName>
        <label>Admin Settings Verification</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>R02__c</fullName>
        <label>Received Signed Form for Lead Assignment</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>R03__c</fullName>
        <label>Received Signed Form for Lead Settings</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ready_To_Score__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box is checked when a report is ready to be scored.</description>
        <label>Ready to Score</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SEO_notes__c</fullName>
        <label>SEO Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Report_Verification_Due_Date__c</fullName>
        <description>Auto calculated from Project Created Date or Alternate Start Date</description>
        <label>Sales Report Verification Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Report_Verification_Set_Days_Due__c</fullName>
        <defaultValue>30</defaultValue>
        <label>Sales Report Verification Set Days Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_report_notes__c</fullName>
        <label>Sales Report Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Score_Count__c</fullName>
        <formula>Creative_Score_Count__c+Implementation_Score_Count__c+LC_Score_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_history_daily_reports_notes__c</fullName>
        <label>Service History &amp; Daily Reports Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Set_Project_Start_Date__c</fullName>
        <description>Field is used in the controller for the visualforce page to check for a change in date, in order to reset due date defaults</description>
        <label>Set Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Set_Training_Start_Date__c</fullName>
        <description>Field is used in the controller for the visualforce page to check for a change in date, in order to reset due date defaults</description>
        <label>Set Training Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Set_Virtual_Training_Start_Date__c</fullName>
        <description>Field is used in the controller for the visualforce page to check for a change in date, in order to reset due date defaults</description>
        <label>Set Virtual Training Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signed_forms_notes__c</fullName>
        <label>Signed Forms Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Success_Fail_Verification_Completed_Date__c</fullName>
        <label>Success/Fail Verification Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Success_Fail_Verification_Due_Date__c</fullName>
        <description>Auto calculated from Project Created Date or Alternate Start Date</description>
        <label>Success/Fail Verification Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Success_Fail_Verification_On_Time__c</fullName>
        <label>Success/Fail Verification On Time?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Success_Fail_Verification_Set_Days_Due__c</fullName>
        <defaultValue>25</defaultValue>
        <label>Success Fail Verification Set Days Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Success_Fail_Verification__c</fullName>
        <label>Success/Fail Verification</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Success_Fail_verification_form_notes__c</fullName>
        <label>Success/Fail Verification Form Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Successful_DT_R1_Push_Completed_Date__c</fullName>
        <label>Successful DT/R1 Push Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Successful_DT_R1_Push_Due__c</fullName>
        <description>Auto calculated from Project Created Date or Alternate Start Date</description>
        <label>Successful DT/R1 Push Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Successful_DT_R1_Push_On_Time__c</fullName>
        <label>Successful DT/R1 Push On Time?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Successful_Push_to_DMS_Completed_Date__c</fullName>
        <label>Successful Push to DMS Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Successful_Push_to_DMS_Due__c</fullName>
        <description>Auto calculated from Project Created Date or Alternate Start Date</description>
        <label>Successful Push to DMS Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Successful_Push_to_DMS_On_Time__c</fullName>
        <label>Successful Push to DMS On Time?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Notes__c</fullName>
        <label>Target - Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>lookup the Team Member the score applies to</inlineHelpText>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recaps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Lead_Submitted_Notes__c</fullName>
        <label>Test Lead Submitted Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Lead_Submitted__c</fullName>
        <label>Test Lead Submitted</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Text_Messaging_Completed_Date__c</fullName>
        <label>Text Messaging Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Text_Messaging_Due_Date__c</fullName>
        <description>Auto calculated from Project Created Date or Alternate Start Date</description>
        <label>Text Messaging Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Text_Messaging_On_Time__c</fullName>
        <label>Text Messaging On Time?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Text_Messaging_Set_Days_Due__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Text Messaging Set Days Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Score_1__c</fullName>
        <description>Generated by trigger, based on values of all prior fields, Yes = 1, No =0</description>
        <label>Total Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Score_New__c</fullName>
        <label>Total Score New</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Trade_Appraisal_Push_Due_Date__c</fullName>
        <description>Auto calculated from Project Created Date or Alternate Start Date</description>
        <label>Trade Appraisal Push Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trade_Appraisal_Set_Days_Due__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Trade Appraisal Set Days Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uploaded_forms_notes__c</fullName>
        <label>Uploaded Forms Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Used_Internet_Pricing_from__c</fullName>
        <label>Used Internet Pricing From</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Used_Retail_Pricing_from__c</fullName>
        <label>Used Retail Pricing From</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Users_Entd_1_2__c</fullName>
        <label>Q1 2nd Score</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Users_Entered_Completed_Date__c</fullName>
        <label>Users Entered Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Users_Entered_Due_Date__c</fullName>
        <description>Auto calculated from Project Created Date or Alternate Start Date</description>
        <label>Users Entered Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Users_Entered_On_Time__c</fullName>
        <label>Users Entered On Time?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Users_Entered_Set_Days_Due__c</fullName>
        <defaultValue>7</defaultValue>
        <label>Users Entered Set Days Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VT_Ad_Hoc_1_Notes__c</fullName>
        <label>VT Ad Hoc 1 Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VT_Ad_Hoc_1__c</fullName>
        <label>VT Ad Hoc 1</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VT_Ad_Hoc_2_Notes__c</fullName>
        <label>VT Ad Hoc 2 Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VT_Ad_Hoc_2__c</fullName>
        <label>VT Ad Hoc 2</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VT_Ad_Hoc_3_Notes__c</fullName>
        <label>VT Ad Hoc 3 Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VT_Ad_Hoc_3__c</fullName>
        <label>VT Ad Hoc 3</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VT_Add_Customer_Set_Days_Due__c</fullName>
        <defaultValue>6</defaultValue>
        <label>VT Add Customer Set Days Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VT_Add_Customer_Settings_Complete_Date__c</fullName>
        <label>VT Add Customer Settings Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VT_Add_Customer_Settings_Due__c</fullName>
        <description>Auto calculated from Virtual Training Start Date</description>
        <label>VT Add Customer Settings Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VT_Add_Customer_Settings_Notes__c</fullName>
        <inlineHelpText>Additional fields required?</inlineHelpText>
        <label>VT Add Customer Settings Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VT_Add_Customer_Settings_On_Time__c</fullName>
        <description>Formula field that looks at the line to be scored if not equal to N/A and Completed Date is less than or equal to Complete Date, then display Yes, otherwise display No</description>
        <formula>IF( !ISPICKVAL(VT_Add_Customer_Settings__c,&quot;N/A&quot;) &amp;&amp; VT_Add_Customer_Settings_Complete_Date__c &lt;= VT_Add_Customer_Settings_Due__c, &quot;Yes&quot;, 
IF( !ISPICKVAL(VT_Add_Customer_Settings__c,&quot;N/A&quot;) &amp;&amp; VT_Add_Customer_Settings_Complete_Date__c &gt; VT_Add_Customer_Settings_Due__c, 
&quot;No&quot;,
IF( !ISPICKVAL(VT_Add_Customer_Settings__c,&quot;N/A&quot;) &amp;&amp; ISBLANK(VT_Add_Customer_Settings_Complete_Date__c), 
&quot;No&quot;, NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VT Add Customer Settings On Time?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VT_Add_Customer_Settings__c</fullName>
        <label>VT Add Customer Settings</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VT_Additional_Admin_Set_Days_Due__c</fullName>
        <defaultValue>6</defaultValue>
        <label>VT Additional Admin Set Days Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VT_Additional_Admin_Settings_Comp_Date__c</fullName>
        <label>VT Additional Admin Settings Comp. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VT_Additional_Admin_Settings_Complete__c</fullName>
        <label>VT Additional Admin Settings Complete</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VT_Additional_Admin_Settings_Due_Date__c</fullName>
        <description>Auto calculated from Virtual Training Start Date</description>
        <label>VT Additional Admin Settings Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VT_Additional_Admin_Settings_Notes__c</fullName>
        <label>VT Additional Admin Settings Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VT_Additional_Admin_Settings_On_Time__c</fullName>
        <description>Formula field that looks at the line to be scored if not equal to N/A and Completed Date is less than or equal to Complete Date, then display Yes, otherwise display No</description>
        <formula>IF(!ISPICKVAL(VT_Additional_Admin_Settings_Complete__c,&quot;N/A&quot;) &amp;&amp; VT_Additional_Admin_Settings_Comp_Date__c &lt;= VT_Additional_Admin_Settings_Due_Date__c, &quot;Yes&quot;, 
IF(!ISPICKVAL(VT_Additional_Admin_Settings_Complete__c,&quot;N/A&quot;) &amp;&amp; VT_Additional_Admin_Settings_Comp_Date__c &gt; VT_Additional_Admin_Settings_Due_Date__c, &quot;No&quot;, 
IF(!ISPICKVAL(VT_Additional_Admin_Settings_Complete__c,&quot;N/A&quot;) &amp;&amp; ISBLANK(VT_Additional_Admin_Settings_Comp_Date__c), &quot;No&quot;,
NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VT Additional Admin Settings On Time?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VT_Admin_Class_Complete_Notes__c</fullName>
        <label>VT Admin Class Complete Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VT_Admin_Class_Complete__c</fullName>
        <label>VT Admin Class Complete</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VT_Admin_Class_Completed_Date__c</fullName>
        <label>VT Admin Class Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VT_Admin_Class_Completed_On_Time__c</fullName>
        <description>Formula field that looks at the line to be scored if not equal to N/A and Completed Date is less than or equal to Complete Date, then display Yes, otherwise display No</description>
        <formula>IF(!ISPICKVAL(VT_Admin_Class_Complete__c,&quot;N/A&quot;) &amp;&amp; VT_Admin_Class_Completed_Date__c &lt;=  VT_Admin_Class_Due_Date__c , &quot;Yes&quot;, 
IF(!ISPICKVAL(VT_Admin_Class_Complete__c,&quot;N/A&quot;) &amp;&amp; VT_Admin_Class_Completed_Date__c &gt; VT_Admin_Class_Due_Date__c , &quot;No&quot;,
IF(!ISPICKVAL(VT_Admin_Class_Complete__c,&quot;N/A&quot;) &amp;&amp; ISBLANK(VT_Admin_Class_Completed_Date__c) , &quot;No&quot;, 
Null)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VT Admin Class Completed On Time?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VT_Admin_Class_Due_Date__c</fullName>
        <description>Auto calculated from Virtual Training Start Date</description>
        <label>VT Admin Class Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VT_Admin_Class_Set_Days_Due__c</fullName>
        <defaultValue>5</defaultValue>
        <label>VT Admin Class Set Days Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VT_Admin_Engagement_Notes__c</fullName>
        <label>VT Admin Engagement Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VT_Admin_Engagement_and_Interaction__c</fullName>
        <label>VT Admin Engagement and Interaction</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VT_Answered__c</fullName>
        <formula>CASE(VT_Admin_Class_Complete__c, &quot;N/A&quot;,0,1)+
CASE(VT_Manager_Class_Complete__c, &quot;N/A&quot;,0,1)+
CASE(VT_Sales_Classes_Complete__c, &quot;N/A&quot;,0,1)+
CASE(VT_Additional_Admin_Settings_Complete__c, &quot;N/A&quot;,0,1)+
CASE(VT_Appraisal_Service_Settings_Mapped__c, &quot;N/A&quot;,0,1)+
CASE(VT_Dynamic_Comments_Setup__c, &quot;N/A&quot;,0,1)+
CASE(VT_Dealer_Form_Settings__c, &quot;N/A&quot;,0,1)+
CASE(VT_Lead_Assignment_Complete__c, &quot;N/A&quot;,0,1)+
CASE(VT_Lead_Settings_Complete__c, &quot;N/A&quot;,0,1)+
CASE(VT_Add_Customer_Settings__c, &quot;N/A&quot;,0,1)+
CASE(VT_Road_to_the_Sale_Complete__c, &quot;N/A&quot;,0,1)+
CASE(Virtual_Training_Complete__c, &quot;N/A&quot;,0,1)+
CASE(VT_Ad_Hoc_1__c, &quot;N/A&quot;,0,1)+
CASE(VT_Ad_Hoc_2__c, &quot;N/A&quot;,0,1)+
CASE(VT_Ad_Hoc_3__c, &quot;N/A&quot;,0,1)</formula>
        <label>VT Answered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VT_Appraisal_Service_Set_Days_Due__c</fullName>
        <defaultValue>6</defaultValue>
        <label>VT Appraisal Service Set Days Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VT_Appraisal_Service_Settings_Comp_Date__c</fullName>
        <label>VT Appraisal Service Settings Comp. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VT_Appraisal_Service_Settings_Due__c</fullName>
        <description>Auto calculated from Virtual Training Start Date</description>
        <label>VT Appraisal Service Settings Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VT_Appraisal_Service_Settings_Mapped__c</fullName>
        <label>VT Appraisal Service Settings Mapped</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VT_Appraisal_Service_Settings_Notes__c</fullName>
        <label>VT Appraisal Service Settings Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VT_Appraisal_Service_Settings_On_Time__c</fullName>
        <description>Formula field that looks at the line to be scored if not equal to N/A and Completed Date is less than or equal to Complete Date, then display Yes, otherwise display No</description>
        <formula>IF(!ISPICKVAL(VT_Appraisal_Service_Settings_Mapped__c,&quot;N/A&quot;) &amp;&amp; VT_Appraisal_Service_Settings_Comp_Date__c &lt;= VT_Appraisal_Service_Settings_Due__c, &quot;Yes&quot;, 
IF(!ISPICKVAL(VT_Appraisal_Service_Settings_Mapped__c,&quot;N/A&quot;) &amp;&amp; VT_Appraisal_Service_Settings_Comp_Date__c &gt; VT_Appraisal_Service_Settings_Due__c, &quot;No&quot;,
IF(!ISPICKVAL(VT_Appraisal_Service_Settings_Mapped__c,&quot;N/A&quot;) &amp;&amp; ISBLANK(VT_Appraisal_Service_Settings_Comp_Date__c), &quot;No&quot;,
NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VT Appraisal Service Settings On Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VT_Dealer_Form_Set_Days_Due__c</fullName>
        <defaultValue>6</defaultValue>
        <label>VT Dealer Form Set Days Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VT_Dealer_Form_Settings_Due_Date__c</fullName>
        <description>Auto calculated from Virtual Training Start Date</description>
        <label>VT Dealer Form Settings Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VT_Dealer_Form_Settings_Notes__c</fullName>
        <inlineHelpText>Who is responsible to print forms?</inlineHelpText>
        <label>VT Dealer Form Settings Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VT_Dealer_Form_Settings_On_Time__c</fullName>
        <description>Formula field that looks at the line to be scored if not equal to N/A and Completed Date is less than or equal to Complete Date, then display Yes, otherwise display No</description>
        <formula>IF( !ISPICKVAL(VT_Dealer_Form_Settings__c,&quot;N/A&quot;) &amp;&amp; VT_Dealer_Forms_Settings_Complete_Date__c &lt;= VT_Dealer_Form_Settings_Due_Date__c, &quot;Yes&quot;, 
IF( !ISPICKVAL(VT_Dealer_Form_Settings__c,&quot;N/A&quot;) &amp;&amp; VT_Dealer_Forms_Settings_Complete_Date__c &gt; VT_Dealer_Form_Settings_Due_Date__c, &quot;No&quot;,
IF( !ISPICKVAL(VT_Dealer_Form_Settings__c,&quot;N/A&quot;) &amp;&amp; ISBLANK(VT_Dealer_Forms_Settings_Complete_Date__c), &quot;No&quot;,
 NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VT Dealer Form Settings On Time?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VT_Dealer_Form_Settings__c</fullName>
        <label>VT Dealer Form Settings</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VT_Dealer_Forms_Settings_Complete_Date__c</fullName>
        <label>VT Dealer Forms Settings Complete Date</label>
        <type>Date</type>
    </fields>
</CustomObject>